// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatComment should format comment consistently 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\` 

##### NOTE

- [ ] Please don't forget review \`Line: 11\` 
- [ ] another note \`Line: 20\` 

##### tODo:

- [ ] this should present \`Line: 13\` 

##### missingBody

- [ ] <space> \`Line: 1\`
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\` 

##### NOTE

- [ ] Please don't forget review \`Line: 21\` 
- [ ] another note \`Line: 2\` 

##### tODo:

- [ ] this should present \`Line: 5\` 
</details>

"
`;

exports[`FormatComment should tag actor with reviewMsg 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\` 

##### NOTE

- [ ] Please don't forget review \`Line: 11\` 
- [ ] another note \`Line: 20\` 

##### tODo:

- [ ] this should present \`Line: 13\` 

##### missingBody

- [ ] <space> \`Line: 1\`
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\` 

##### NOTE

- [ ] Please don't forget review \`Line: 21\` 
- [ ] another note \`Line: 2\` 

##### tODo:

- [ ] this should present \`Line: 5\` 
</details>

---
@mock-actor please review"
`;
